// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Board renders 9 slots 1`] = `
<div
  className="sc-bwzfXH fkTWXJ"
>
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot0"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot1"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot2"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot3"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot4"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot5"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot6"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot7"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot8"
    onClick={[Function]}
  />
</div>
`;

exports[`Board renders filled slots 1`] = `
<div
  className="sc-bwzfXH fkTWXJ"
>
  <div
    className="sc-bdVaJa heJmyo"
    data-testid="Slot0"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot1"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa kiPKqZ"
    data-testid="Slot2"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot3"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot4"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot5"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot6"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot7"
    onClick={[Function]}
  />
  <div
    className="sc-bdVaJa gigbzF"
    data-testid="Slot8"
    onClick={[Function]}
  />
</div>
`;
